syntax = "proto3";

option csharp_namespace = "Makc2024.Dummy.Writer.Infrastructure.App.Grpc";

package Writer;

service App {
    rpc Login (AppLoginActionGrpcRequest) returns (AppLoginActionGrpcReply);
}

message AppLoginActionGrpcRequest {
    string user_name = 1;
    string password = 2;
}

message AppLoginActionGrpcReply {
    string user_name = 1;
    string access_token = 2;
}
